# omnibridge

./: .gitignore  Cargo.toml  README.md
bridge/: Cargo.toml
bridge/src/: lib.rs
bridge/src/data/: bid.rs  board.rs  card.rs  hand.rs  hand_eval.rs  holding.rs  match_protocol.rs  mod.rs  result.rs  scoring.rs  stack.rs  table.rs  trick.rs
bridge/src/test/: mod.rs
bridge/src/test/data/: holding.rs  mod.rs  result.rs  trick.rs  vec_stack.rs
bridge/src/test/operations/: mod.rs
emacs/: bridge-mode.el  bridge-single-table.el  bridge.el  omnibridge-server-interface.el
language/: Cargo.toml
language/src/: builtin_instr.rs  builtin_type.rs  compiler.rs  constraint.rs  env.rs  expr.rs  interpreter.rs  lib.rs  parser.rs  program.rs  sexp.rs  source_meta.rs  test_utils.rs  type_checker.rs  type_error.rs  type_var.rs  typed.rs  var.rs
language/src/ast/: expect.rs  mod.rs
language/src/instr/: binop.rs  bool.rs  mod.rs
language/src/test/: compiler.rs  mod.rs  parser.rs  runtime.rs  type_var.rs
server/: Cargo.toml
server/src/: command.rs  main.rs  protocol.rs
src/bidder/: bidding_state.rs  main.rs
src/dealer/: main.rs
src/leader/: main.rs
src/lib/: data.rs  mod.rs  sexpr.rs
src/lib/data/: bid.rs  board.rs  card.rs  display.rs  hand.rs  hand_eval.rs  holding.rs  match_protocol.rs  mod.rs  numeric.rs  result.rs  scoring.rs  sexpable.rs  table.rs  test.rs  trick.rs
src/lib/data/test/: card.rs  hand.rs  holding.rs  result.rs  trick.rs  vec_stack.rs
src/lib/dealer/: mod.rs
src/lib/language/: ast.rs  core_lisp.rs  full_lisp.rs  mod.rs  parser.rs  sexp.rs  sexpable.rs  sexpr.rs  src_location.rs
src/lib/language/ast/: expect.rs  mod.rs
src/lib/language/test/: mod.rs
src/lib/test/data/: card.rs  hand.rs  result.rs
src/server/: command.rs  main.rs  protocol.rs  state.rs
src/test/: main.rs
