[package]
name = "bridge-mentor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
hex = "0.4.3"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2"
rand = "0.8.5"
ring = "0.17.8"
serde = {version = "1.0.198", features = ["derive"]}
sexp = "1.1.4"

[lib]
name = "bridge"
path = "src/lib/mod.rs"

[[bin]]
name = "leader"
path = "src/leader/main.rs"

[[bin]]
name = "bidder"
path = "src/bidder/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "test"
path = "src/test/main.rs"