[package]
name = "omnibridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
hex = "0.4.3"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2"
omnibridge-language = { path = "../language" }
quickcheck = "1.0.3"
rand = "0.8.5"
ring = "0.17.8"
serde = {version = "1.0.198", features = ["derive"]}

[lib]
name = "bridge"
path = "src/lib.rs"