[package]
name = "omnibridge-language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.15.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2"
tree-sitter = "0.20"
tree-sitter-commonlisp = "0.3.3"

[dev-dependencies]
proptest = "1.5.0"
proptest-derive = "0.5.0"

[lib]
name = "language"
path = "src/lib.rs"
